# zephyr_lvgl_2048_st25dv

./: .gitignore  README.md
boards/: native_sim_64.overlay  st25dv_lvgl.overlay
boards/arm/st25dv_disco/: .st25dv_disco.dts.swp  Kconfig.board  Kconfig.defconfig  board.cmake  st25dv_disco.dts  st25dv_disco_defconfig.yaml
boards/arm/st25dv_disco/docs/: index.rst
boards/arm/st25dv_mb1283_disco/: Kconfig.board  st25dv_mb1283_disco.dts  st25dv_mb1283_disco_defconfig  st25dv_mb1283_disco_defconfig.yaml
boards/arm/st25dv_mb1283_disco/docs/: index.rst
boards/st/st25dv_mb1283_disco/: Kconfig.defconfig  Kconfig.st25dv_mb1283_disco
display/: .CMakeLists.txt.swp  CMakeLists.txt  prj.conf
display/src/: .main.c.swp  main.c
game/: .prj.conf.swp  CMakeLists.txt  LICENSE  README.rst  prj.conf
game/boards/: native_sim_64.overlay
game/src/: .lv_100ask_2048.c.swp  .lv_100ask_2048_app.c.swp  .main.c.swp  README.md  lv_100ask_2048.c  lv_100ask_2048.h  lv_100ask_2048_app.c  lv_100ask_2048_app.h  main.c
lvgl/: prj.conf
